--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD 330 Portfolio</title>
     <link rel="stylesheet" href="/styles.css" />
-    <script src="js\main.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <h1>WDD 330 portfolio</h1>
