--- a/index.html
+++ b/index.html
@@ -12,4 +12,15 @@
     <h2>Week014</h2>
     <ul id="myList"></ul>
   </body>
+  <script>
+    let data = ["Ram", "Shyam", "Sita", "Gita"];
+
+    let list = document.getElementById("myList");
+
+    data.forEach((item) => {
+      let li = document.createElement("li");
+      li.innerText = item;
+      list.appendChild(li);
+    });
+  </script>
 </html>
