--- a/index.html
+++ b/index.html
@@ -9,18 +9,7 @@
   </head>
   <body>
     <h1>WDD 330 portfolio</h1>
-    <h2>Week014</h2>
+    <h2>Week01 v8</h2>
     <ul id="myList"></ul>
   </body>
-  <script>
-    let data = ["Ram", "Shyam", "Sita", "Gita"];
-
-    let list = document.getElementById("myList");
-
-    data.forEach((item) => {
-      let li = document.createElement("li");
-      li.innerText = item;
-      list.appendChild(li);
-    });
-  </script>
 </html>
