--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD 330 Portfolio</title>
     <link rel="stylesheet" href="/styles.css" />
-    <script src="C:\Users\Spencer\wdd330\js\main.js"></script>
+    <script src="main.js"></script>
+    <script src="/main.js"></script>
+    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
   </head>
   <body>
     <h1>WDD 330 portfolio</h1>
-    <h2>Week01 v14</h2>
+    <h2>Week01 v15</h2>
     <ul id="myList"></ul>
   </body>
 </html>
