--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
     <script src="/main.js"></script>
     <script src="js/main.js"></script>
     <script src="/js/main.js"></script>
+    <script>
+      let data = ["Ram", "Shyam", "Sita", "Gita"];
+
+let list = document.getElementById("myList");
+
+data.forEach((item) => {
+  let li = document.createElement("li");
+  li.innerText = item;
+  list.appendChild(li);
+});
+    </script>
   </head>
   <body>
     <h1>WDD 330 portfolio</h1>
-    <h2>Week01 v15</h2>
+    <h2>Week01 v16</h2>
     <ul id="myList"></ul>
   </body>
 </html>
