--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
     <script>
       let data = ["Ram", "Shyam", "Sita", "Gita"];
 
-let list = document.getElementById("myList");
+      let list = document.getElementById("myList");
 
-data.forEach((item) => {
-  let li = document.createElement("li");
-  li.innerText = item;
-  list.appendChild(li);
-});
+      data.forEach((item) => {
+        let li = document.createElement("li");
+        li.innerText = item;
+        list.appendChild(li);
+      });
     </script>
   </head>
   <body>
     <h1>WDD 330 portfolio</h1>
-    <h2>Week01 v16</h2>
+    <h2>Week01 v17</h2>
     <ul id="myList"></ul>
+    <script src="js/main.js"></script>
   </body>
 </html>
