--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <h1>WDD 330 portfolio</h1>
-    <h2>Week01 v19</h2>
+    <h2>Week01 v20</h2>
     <ul id="myList"></ul>
     <script src="main.js"></script>
-    <script src="/main.js"></script>
+    <!-- <script src="/main.js"></script>
     <script src="js/main.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/js/main.js"></script> -->
   </body>
 </html>
