--- a/week01/index.html
+++ b/week01/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDD 330 Portfolio</title>
-    <!-- <link rel="stylesheet" href="/styles.css" /> -->
+    <title>WDD-330 Week-01</title>
   </head>
   <body>
     <h1>WDD 330 Portfolio</h1>
-    <h2>Week01 v26</h2>
-    <ul id="myList"></ul>
-    <script src="js/main.js"></script>
+    <h2>Week01</h2>
   </body>
 </html>
