--- a/week01/index.html
+++ b/week01/index.html
@@ -6,7 +6,7 @@
     <title>WDD-330 Week-01</title>
   </head>
   <body>
-    <h1>WDD 330 Portfolio</h1>
+    <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2>Week01</h2>
   </body>
 </html>
