--- a/week01/index.html
+++ b/week01/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2>Week01</h2>
+    <a href="../index.html">WDD 330 Portfolio</a>
   </body>
 </html>
