--- a/week01/index.html
+++ b/week01/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2>Week01</h2>
-    <a href="../index.html">WDD 330 Portfolio</a>
+    <p><a href="../index.html">WDD 330 Portfolio</a></p>
   </body>
 </html>
