--- a/week01/index.html
+++ b/week01/index.html
@@ -8,6 +8,10 @@
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2>Week01</h2>
-    <h3>v0</h3>
+    <p>
+        What exercises are referred to in item 5 of the reading submission instructions?
+        What is the best way to debug when hosting on github? 
+        Should I use something else to host it locally?
+    </p>
   </body>
 </html>
