--- a/week02/index.html
+++ b/week02/index.html
@@ -9,7 +9,7 @@
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2>Week02</h2>
     <p>
-        <a href="notesAndQuestions.html">Notes / Questions</a>
+        <a href="notesAndQuestions.html">Notes / Questions</a><br>
         <a href="teamActivityInstructorSolution">Team Activity Instructor's Solution</a>
     </p>
   </body>
