--- a/week03/index.html
+++ b/week03/index.html
@@ -10,7 +10,7 @@
     <h2>Week03</h2>
     <p>
         <a href="exercisesAndNotes.html">Exercises / Notes</a><br>
-        <a href="teamActivityTeamSolution">Team Activity: Our Team's Solution</a>
+        <a href="teamActivityTeamSolution">Team Activity: Our Team's Solution</a><br>
         <a href="teamActivityInstructorSolution">Team Activity Instructor's Solution</a>
     </p>
   </body>
