--- a/week04/index.html
+++ b/week04/index.html
@@ -10,6 +10,7 @@
     <h2>Week04</h2>
     <p>
         <a href="notes.html">Notes</a><br>
+        <a href="teamActivityTeamSolution">Team Activity: Our Team's Solution</a><br>
     </p>
   </body>
 </html>
