--- a/week04/index.html
+++ b/week04/index.html
@@ -11,6 +11,7 @@
     <p>
         <a href="notes.html">Notes</a><br>
         <a href="teamActivityTeamSolution">Team Activity: Our Team's Solution</a><br>
+        <a href="teamActivityInstructorSolution">Team Activity Instructor's Solution</a>
     </p>
   </body>
 </html>
