--- a/week05/teamActivityTeamSolution/index.html
+++ b/week05/teamActivityTeamSolution/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
-    <h2><a href="index.html">Week04</a></h2>
+    <h1><a href="../../index.html">WDD 330 Portfolio</a></h1>
+    <h2><a href="../index.html">Week05</a></h2>
     <h3>Great Hikes</h3>
     <main>
       <h1 class="g-hikes">Great hikes</h1>
