--- a/week05/notes.html
+++ b/week05/notes.html
@@ -7,34 +7,19 @@
   </head>
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
-    <h2><a href="index.html">Week04</a></h2>
+    <h2><a href="index.html">Week05</a></h2>
     <h3>Exercises / Notes</h3>
     <ul>
-        <li>front-end validation on the client is to help the user</li>
-        <li>backend validation on the server is to ensure security</li>
-        <li>&it;button type='submit' id='submit' disabled>Submit&it;/button&gt;<br>
-          document.getElementById('submit').disabled = mybool;</li>
-        <li>properties - qualities</li>
-        <li>methods - actions</li>
-        <li>encapsulation - obscure the inner workings as much as possible (blackbox)</li>
-        <li>polymorphism - objects can have their own definitions of inherited methods</li>
-        <li>inheritance - creating with a previous object as a base to jump off of</li>
-        <li>classes - abstract blueprints of objects</li>
-        <li>prototype-based languages have instantiated object-prototypes instead of classes</li>
-        <li>Math.floor(myFloor)</li>
-        <li>Math.ceiling(myCeiling)</li>
-        <li>{ Math.random() | 0 <= x < 1 }<br>not cryptographically secure</li>
-        <li>static methods are abstract and are called from the class, 
-          not an instance of the class</li>
-        <li>javascript member properties and methods default to public</li>
-        <li>all objects ultimately inherit from the Object prototype</li>
-        <li>built in methods are harder to find because .propertyIsEnumerable() = false</li>
-        <li>monkey-patching - adding your own methods to standard classes</li>
-        <li>objects (including functions) are often copy by reference, 
-          so use the copy() function with assignments</li>
-        <li>sometimes the this keyword loses scope, but the that keyword might still work</li>
-        <li>banana = Gorilla.prototype.banana;</li>
-        <li>Javascript is often more model-view than model-view-controller</li>
+        <li>error - something went wrong</li>
+        <li>user errors are really programmer errors</li>
+        <li>exception - error that returns a value the program can use to deal with the error</li>
+        <li>stack trace - call sequence that leads to the error</li>
+        <li>strict mode makes styling errors real errors<br>
+          put 'use strict'; at the top of the body of a function to use</li>
+        <li>linting tools are another option</li>
+        <li>window.navigator.userAgent identifies the user's browser</li>
+        <li>javascript has lots of error objects</li>
+        <li>jest is a library of userful testing tools</li>
       </ul>
   </body>
 </html>
