--- a/week01/index.html
+++ b/week01/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
-    <h2>Week01</h2>
-    <p>
-        What exercises are referred to in item 5 of the reading submission instructions?
-        What is the best way to debug when hosting on github? 
-        Should I use something else to host it locally?
-    </p>
+    <h2>Week 1 Questions</h2>
+    <ul>
+      <li>What exercises are referred to in item 5 of the reading submission instructions?</li>
+      <li>What is the best way to debug when hosting on github?</li>
+      <li>Should I use something else to host it locally?</li>
+    </ul>
   </body>
 </html>
