--- a/week02/notesAndQuestions.html
+++ b/week02/notesAndQuestions.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
-    <h2><a href="index.html">Week02</a></h2>
+    <h2>Week 2 Notes / Questions</h2>
     <ul>
         <li>using the var keyword (or not using a keyword) has global scope and
              shouldn't be done</li>
