--- a/week05/notes.html
+++ b/week05/notes.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
-    <h2><a href="index.html">Week05</a></h2>
-    <h3>Exercises / Notes</h3>
+    <h2><a href="index.html">Week 5</a></h2>
+    <h3>Notes</h3>
     <ul>
         <li>error - something went wrong</li>
         <li>user errors are really programmer errors</li>
