--- a/week04/notes.html
+++ b/week04/notes.html
@@ -8,7 +8,7 @@
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2><a href="index.html">Week 4</a></h2>
-    <h3>Exercises / Notes</h3>
+    <h3>Notes</h3>
     <ul>
         <li>front-end validation on the client is to help the user</li>
         <li>backend validation on the server is to ensure security</li>
