--- a/week06/To-Do.html
+++ b/week06/To-Do.html
@@ -11,7 +11,7 @@
     <h2>Week 6 Challenge 1</h2>
     <h3>Todos</h3>
     <div class='todoList'></div>
-    <form action="add()">
+    <form onclick="add()">
         <input type="text" id="add" name="add" value="">
         <input type="submit" value="+">
     </form> 
