--- a/week06/To-Do.html
+++ b/week06/To-Do.html
@@ -7,11 +7,16 @@
     <script src="To-Do.js"></script>
   </head>
   <body>
+    <script>
+      function myFunction() {
+        document.getElementById("add").innerHTML = "Hello World";
+      }
+    </script>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2>Week 6 Challenge 1</h2>
     <h3>Todos</h3>
     <div class='todoList'></div>
-    <form onclick="add()">
+    <form onclick="myFunction()">
         <input type="text" id="add" name="add" value="">
         <input type="submit" value="+">
     </form> 
