--- a/week06/To-Do.html
+++ b/week06/To-Do.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD-330 Week-06</title>
-    <script src="To-Do.js"></script>
+    <!-- <script src="To-Do.js"></script> /-->
   </head>
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
