--- a/week06/To-Do.html
+++ b/week06/To-Do.html
@@ -12,6 +12,6 @@
     <h3>Todos</h3>
     <div class='todoList'></div>
     <input type="text" id="add" name="add" value="">
-    <input onclick="add() "value="+">
+    <input type="button" onclick="add()" value="+">
   </body>
 </html>
