--- a/week06/To-Do.html
+++ b/week06/To-Do.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WDD-330 Week-06</title>
-    <!-- <script src="To-Do.js"></script> /-->
+    <script src="To-Do.js"></script>
   </head>
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
     <h2>Week 6 Challenge 1</h2>
     <h3>Todos</h3>
     <div class='todoList'></div>
-    <input type="text" id="add" name="add" value="">
+    <input type="text" id="add" name="add" value=''>
     <input type="button" onclick="add()" value="+">
   </body>
 </html>
