--- a/week07/hiking-complete.html
+++ b/week07/hiking-complete.html
@@ -63,8 +63,12 @@
     <main>
       <h1>Great hikes</h1>
       <ul id="hikes" class="hikeStyles"></ul>
+      <input type="text" id="comment">
+      <input type="button" id="submit" value="submit">
+
     </main>
 
     <script src="app5.js" type="module"></script>
+    <script src="comments.js"></script>
   </body>
 </html>
