--- a/week07/notes.html
+++ b/week07/notes.html
@@ -7,19 +7,20 @@
   </head>
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
-    <h2><a href="index.html">Week 5</a></h2>
+    <h2><a href="index.html">Week 7</a></h2>
     <h3>Notes</h3>
     <ul>
-        <li>error - something went wrong</li>
-        <li>user errors are really programmer errors</li>
-        <li>exception - error that returns a value the program can use to deal with the error</li>
-        <li>stack trace - call sequence that leads to the error</li>
-        <li>strict mode makes styling errors real errors<br>
-          put 'use strict'; at the top of the body of a function to use</li>
-        <li>linting tools are another option</li>
-        <li>window.navigator.userAgent identifies the user's browser</li>
-        <li>javascript has lots of error objects</li>
-        <li>jest is a library of userful testing tools</li>
+        <li>Ajax - used for doing things in the background and updating a page without reloading it</li>
+        <li>API - application programming interface. Allows 3rd party use of data</li>
+        <li>callback hell occurs when you format async code as if it were synchronous</li>
+        <li>promise:<br>fetch('https://example.com/data')<br>
+          .then( // code that handles the response )<br>
+          .catch( // code that runs if the server returns an error )</li>
+        <li>GET - requests to retrieve resources</li>
+        <li>POST - requests, usually used to create a resource but can actually perform any task</li>
+        <li>PUT - requests to upsert, which means insert a resource or update it entirely</li>
+        <li>PATCH - requests to make partial updates to a resource</li>
+        <li>DELETE - requests to delete a resources</li>
       </ul>
   </body>
 </html>
