--- a/week08/notes.html
+++ b/week08/notes.html
@@ -10,17 +10,18 @@
     <h2><a href="index.html">Week 8</a></h2>
     <h3>Notes</h3>
     <ul>
-      <span>CSS Transitions</span>
+      <b>CSS Transitions</b>
       <li>CSS can be used to animate elements by transforming, translating, or rotating them</li>
       <li>200ms is generally considered the optimum time for a transition</li>
       <li>A 50ms transition-delay is enough to be sure they are intentionally hovering over the element</li>
       <li>There is a lot of shorthand available for transition code syntax</li>
       <br>
-      <span>CSS Animations</span>
+      <b>CSS Animations</b>
       <li>CSS keyframe animation is better than javascript for simple, low intensity animations</li>
       <li>There is also a lot of shorthand available for animation code syntax</li>
       <li>Don't use reserved animation keywords like 'running' to name your animations</li>
-      <h4>Canvas</h4>
+      <br>
+      <b>Canvas</b>
       <li>rgba - red green blue alpha (opacity)</li>
       <li>It takes many steps to draw complex shapes with canvas</li>
       <li>toDataURL allows drawn images to be saved in an image format</li>
@@ -29,7 +30,7 @@
       <li>Grayscale formula: grayscale = red * 0.3 + green * 0.59 + blue * 0.11;</li>
       <li>Canvas is not very accessible to things like screen readers</li>
       <br>
-      <span>SVG</span>
+      <b>SVG</b>
       <li>SVG - Scalable Vector Graphics</li>
       <li>bitmap images - things like GIF, JPEG, PNG; also called raster graphics</li>
       <li>XML - Extensible Markup Language</li>
@@ -40,13 +41,13 @@
       <li>http://openclipart.org/ is a good resource for public domain images</li>
       <li>Raphaël is an open-source JavaScript library that makes drawing and animating with SVG much easier</li>
       <br>
-      <span>Canvas vs SVG</span>
+      <b>Canvas vs SVG</b>
       <li>canvas is faster</li>
       <li>canvas allows for pixel manipulation</li>
       <li>SVG has tools available</li>
       <li>SVG involves scannable text</li>
       <br>
-      <span>Drag & Drop</span>
+      <b>Drag & Drop</b>
       <li>API - Application Programming Interface</li>
       <li>Drag and drop functionalities are disabled by default</li>
     </ul>
