--- a/week08/notes.html
+++ b/week08/notes.html
@@ -7,8 +7,7 @@
   </head>
   <body>
     <h1><a href="../index.html">WDD 330 Portfolio</a></h1>
-    <h2><a href="index.html">Week 8</a></h2>
-    <h3>Notes</h3>
+    <h2>Week 8 Notes</h2>
     <ul>
       <b>CSS Transitions</b>
       <li>CSS can be used to animate elements by transforming, translating, or rotating them</li>
