--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -14,7 +14,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.1/howler.min.js"></script>
     <script>
     var sound = new Howl({
-      src: ['audio/p1'],
+      // src: ['audio/p1'],
+      src: ['https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3'],
       volume: 1.0,
       onend: function () {
         alert('We finished with the setup!');
