--- a/week10/notes.html
+++ b/week10/notes.html
@@ -23,7 +23,7 @@
         <br>
         HTMLTextAreaElement
       </li>
-      <li>Files can be uploaded using an HTML <input type="file" multiple /> input element, FormData() and fetch()</li>
+      <li>Files can be uploaded using an HTML \<input type="file" multiple /\> input element, FormData() and fetch()</li>
       <li>json() actually parses the body of the response object</li>
     </ul>
   </body>
