--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -16,9 +16,19 @@
       function getRandomInt(max) {
         return Math.floor(Math.random() * max);
       }
+      function getSign() {
+        let sign = getRandomInt(2);
+        if (sign) return 'p';
+        else return 'n';
+      }
+      function getMagnitude() {
+        let magnitude = (getRandomInt(2) + 1) * 5;
+        return magnitude.toString();
+      }
       function play() {
-        let myInt = (getRandomInt(2) + 1) * 5;
-        let myStr = 'audio/p' + myInt.toString() + '.mp3';
+        let sign = getSign();
+        let magnitude = getMagnitude();
+        let myStr = 'audio/' + sign + magnitude + '.mp3';
         console.log(myStr);
         myAudio = new Audio(myStr);
         myAudio.play();
