--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -39,8 +39,10 @@
       }
       function getMagnitude(myMin, myMax) {
         let myRange = (myMax - myMin) / 5;
+        console.log('myRange: ' + myRange);
         let magnitude = (getRandomInt(myRange) + 1) * 5 + myMin;
-
+        console.log('myMin: ' + myMin);
+        console.log('magnitude: ' + magnitude);
         return magnitude.toString();
       }
       function play() {
@@ -49,9 +51,9 @@
         let myMax = document.getElementById('max').value;
         let magnitude = getMagnitude(myMin, myMax);
         let myStr = 'audio/' + sign + magnitude + '.mp3';
-        console.log(myMin);
+        console.log('myMin: ' + myMin);
         console.log(myStr);
-        console.log(myMax);
+        console.log('myMax: ' + myMax);
         myAudio = new Audio(myStr);
         myAudio.play();
       }
