--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -40,7 +40,7 @@
       function getMagnitude(myMin, myMax) {
         let myRange = (myMax - myMin) / 5;
         console.log('myRange: ' + myRange);
-        let magnitude = (getRandomInt(myRange) + 1) * 5 + myMin;
+        let magnitude = (getRandomInt(myRange) + 1) * 5 + Number(myMin);
         console.log('myMin: ' + myMin);
         console.log('magnitude: ' + magnitude);
         return magnitude.toString();
