--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -51,7 +51,7 @@
         let myStr = 'audio/' + sign + magnitude + '.mp3';
         console.log('myMin: ' + myMin);
         console.log(myStr);
-        console.log('myMax: ' + myMax);
+        console.log('myMax: ' + myMax + '\n');
         myAudio = new Audio(myStr);
         myAudio.play();
       }
