--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -60,6 +60,7 @@
         let myMin = document.getElementById('min').value;
         let myMax = document.getElementById('max').value;
         if (myMin - myMax) { // if range is impossible
+          console.log(myMin - myMax);
           if (myStr == 'min') {
             document.getElementById('max').value 
               = document.getElementById('min').value;
