--- a/Block2Challenge/index.html
+++ b/Block2Challenge/index.html
@@ -59,7 +59,7 @@
       function validateRange(myStr) {
         let myMin = document.getElementById('min').value;
         let myMax = document.getElementById('max').value;
-        if (myMin - myMax) { // if range is impossible
+        if (myMin > myMax) { // if range is impossible
           console.log(myMin - myMax);
           if (myStr == 'min') {
             document.getElementById('max').value 
